# production-ai-portfolio

./: .env.example  .gitignore  AGENTICFLOW_README.md  CLEANUP_SUMMARY.md  CODE_REVIEW_RESULTS.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  CONTEXT_MANIFEST.yaml  CRITICAL_FIXES_SUMMARY.md  CRITICAL_ISSUES_FIX_STATUS.md  Dockerfile  IMPLEMENTATION_PLAN.md  NOTEBOOKS_CREATED.md  NOTEBOOKS_FINAL_SUMMARY.md  PROJECT_CATEGORIES.md  PROJECT_STRUCTURE.md  README.md  REPO_REFERENCE.md  TECHNICAL.md  UI_GUIDE.md  docker-compose.yml  glm-prompts-3b-prompt-optimizer.md  glm-prompts-agent-projects.md  glm-prompts-evaluation-projects.md  glm-prompts-rag-projects.md  pyproject.toml  requirements.txt  run_tests.py  test_all_projects.py
FraudTriage-Agent/: README.md  pyproject.toml  requirements.txt
FraudTriage-Agent/src/: __init__.py
FraudTriage-Agent/src/agents/: triage_nodes.py  workflow.py
FraudTriage-Agent/src/api/: __init__.py
FraudTriage-Agent/src/config/: __init__.py  settings.py
FraudTriage-Agent/src/models/: review.py
FraudTriage-Agent/src/tools/: device_tools.py  fraud_tools.py  transaction_tools.py
FraudTriage-Agent/src/utils/: __init__.py  formatting.py  logging.py
FraudTriage-Agent/tests/: __init__.py  conftest.py
FraudTriage-Agent/tests/integration/: test_workflow_integration.py
FraudTriage-Agent/tests/unit/: __init__.py  test_agents.py  test_models.py  test_tools.py
aiguard/: .env.example  .gitignore  pyproject.toml  requirements.txt
aiguard/src/demo/: __init__.py  app.py
aiguard/src/guardrails/: __init__.py
aiguard/src/guardrails/jailbreak/: __init__.py  jailbreak_detector.py
aiguard/src/guardrails/output_filter/: output_guard.py
aiguard/src/guardrails/pii/: __init__.py
aiguard/src/guardrails/prompt_injection/: prompt_injection.py
aiguard/src/middleware/: __init__.py
aiguard/src/tests/: adversarial_tests.py
projects/agents/AdInsights-Agent/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
projects/agents/AdInsights-Agent/notebooks/: .gitkeep
projects/agents/AdInsights-Agent/src/analytics/: __init__.py  time_series.py
projects/agents/AdInsights-Agent/src/api/: main.py
projects/agents/AdInsights-Agent/src/data/: __init__.py  ad_platform_client.py
projects/agents/AdInsights-Agent/src/models/: __init__.py
projects/agents/AdInsights-Agent/tests/: test_ad_performance_analyzer.py  test_insights_agent.py
projects/evaluation/LLMOps-Eval/: .env.example  .gitignore  Dockerfile  PromptOptimizer_README.md  README.md  docker-compose.yml  pyproject.toml  requirements-optimizer.txt  requirements.txt
projects/evaluation/LLMOps-Eval/docker/: Dockerfile
projects/evaluation/LLMOps-Eval/k8s/: configmap.yaml  deploy.sh  deployment.yaml  service.yaml
projects/evaluation/LLMOps-Eval/src/: __init__.py  config.py
projects/evaluation/LLMOps-Eval/src/api/: main.py
projects/evaluation/LLMOps-Eval/src/dashboard/: app.py
projects/evaluation/LLMOps-Eval/src/datasets/: __init__.py  dataset_manager.py
projects/evaluation/LLMOps-Eval/src/evaluation/: metrics.py
projects/evaluation/LLMOps-Eval/src/models/: llm_providers.py
projects/evaluation/LLMOps-Eval/src/monitoring/: metrics.py  prometheus_metrics.py
projects/evaluation/LLMOps-Eval/src/prompt_optimizer/: __init__.py  config.py
projects/evaluation/LLMOps-Eval/src/reporting/: __init__.py  report_generator.py
projects/evaluation/LLMOps-Eval/src/runners/: __init__.py  eval_runner.py
projects/evaluation/LLMOps-Eval/tests/: test_llmops_eval.py  test_prompt_optimizer.py
projects/infrastructure/StreamProcess-Pipeline/: .env.example  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
projects/infrastructure/StreamProcess-Pipeline/k8s/: 03-deployment-api.yaml  04-deployment-worker.yaml  05-services.yaml  07-pdb.yaml  08-servicemonitor.yaml  09-network-policy.yaml  README.md  kustomization.yaml  prometheus.yml  redis-deployment.yaml
projects/infrastructure/StreamProcess-Pipeline/src/: __init__.py
projects/infrastructure/StreamProcess-Pipeline/src/api/: __init__.py  main.py  metrics_endpoint.py
projects/infrastructure/StreamProcess-Pipeline/src/embedding/: __init__.py  embed_service.py
projects/infrastructure/StreamProcess-Pipeline/src/ingestion/: __init__.py  consumer.py  validators.py
projects/infrastructure/StreamProcess-Pipeline/src/monitoring/: __init__.py  metrics.py
projects/infrastructure/StreamProcess-Pipeline/src/processing/: dlq_consumer.py  worker.py
projects/infrastructure/StreamProcess-Pipeline/src/storage/: __init__.py  database.py  vector_store.py
projects/infrastructure/StreamProcess-Pipeline/tests/: __init__.py  conftest.py
projects/infrastructure/StreamProcess-Pipeline/tests/integration/: conftest.py  test_pipeline.py
projects/rag/DataChat-RAG/: Dockerfile  README.docker.md  README.md  coverage.xml  pyproject.toml
projects/rag/DataChat-RAG/scripts/: README.md  setup_database.py
projects/rag/DataChat-RAG/src/api/: main.py
projects/rag/DataChat-RAG/src/cache/: __init__.py  query_cache.py
projects/rag/DataChat-RAG/src/core/: rag_chain.py
projects/rag/DataChat-RAG/src/retrievers/: doc_retriever.py
projects/rag/DataChat-RAG/src/routers/: query_router.py
projects/rag/DataChat-RAG/src/ui/: __init__.py  chat_app.py
projects/rag/DataChat-RAG/tests/: __init__.py  test_datachat_advanced.py
projects/rag/Enterprise-RAG/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
projects/rag/Enterprise-RAG/src/: config.py  exceptions.py  logging_config.py
projects/rag/Enterprise-RAG/src/api/: main.py
projects/rag/Enterprise-RAG/src/core/: __init__.py
projects/rag/Enterprise-RAG/src/ingestion/: __init__.py
projects/rag/Enterprise-RAG/tests/: __init__.py  conftest.py
projects/rag/fraud-docs-rag/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
projects/rag/fraud-docs-rag/frontend/: package.json
projects/rag/fraud-docs-rag/tests/: conftest.py
(+289 files in other folders)
